# MyResource

./: README.md  id_rsa.pub
CMake/configCoverageTest/: .gcovConfigBuild.txt.swp  CMakeLists.txt  gcovConfigBuild.txt
GoogleTest/: CMakeLists.txt  genMakeFile.sh  mytest.bash  runTest.sh
GoogleTest/include/myclass/: MyClass.h  MyClass2.h
GoogleTest/src/: MyClass.cpp  MyClass2.cpp
GoogleTest/test/: MyTest.cpp
MySource/: CMakeLists.txt
MySource/include/: HealthManager.h  PowerManager.h  Watchdog.h  typedef.h
MySource/sources/: HealthManager.cpp  PowerManager.cpp  Watchdog.cpp
MySource/testscripts/: UT_HealthManager_main.cpp  gtest_main.cpp  test.cpp
MySource/testscripts/mock/: PowerManager_mock.h  Watchdog_mock.h
temp/: --library=pthread  function  functionPtr.cpp  pthread  pthread.cpp
temp/Gtest/: CMakeLists.txt
temp/Gtest/include/: AtmMachine.h  Banker.h
temp/Gtest/src/: AtmMachine.cpp  Banker.cpp
temp/Gtest/test/mytest.cpp/: timer.cpp  timer.h
